[package]
name = "tokinotify"
version = "0.1.0"
edition = "2021"

description = "file watching for async contexts"
license = "MIT"
repository = "https://github.com/eulegang/tokinotify"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["fs", "io-util"] }
